fix: use padding instead of gap to smooth out fade animation

--- a/src/pages/_shared/study-config-popup/study-config-popup.scss
+++ b/src/pages/_shared/study-config-popup/study-config-popup.scss
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   min-width: 20vw;
-  gap: 16px;
   padding-top: 8px;
 
   .scp-stats {
@@ -13,6 +12,7 @@
     flex-direction: column;
     gap: 4px;
     font-size: 14px;
+    padding-bottom: 16px;
 
     span {
       font-weight: 600;
@@ -44,7 +44,9 @@
   }
 
   .scp-study-type {
+    padding-bottom: 16px;
     width: 100%;
+
     button {
       border-radius: $standard-radius / 2;
       width: 100%;
@@ -52,9 +54,12 @@
   }
 
   .scp-order-dropdown {
+    padding-bottom: 16px;
   }
 
   .scp-max-cards {
+    padding-bottom: 16px;
+
     .max-cards-content {
       display: flex;
       align-items: baseline;
@@ -87,7 +92,7 @@
   }
 
   .scp-start-lesson {
-    padding-top: 8px;
+    padding-top: 4px;
 
     button {
       font-size: 16px;
